examples/errors/unreachable.ik
fn main():
  print("a")
  return
  print("b")

